@@ -44,7 +44,12 @@ tasks.withType<JavaCompile> {
     options.encoding = "UTF-8"
     options.isIncremental = true
     options.compilerArgs.add("-parameters")
+    options.compilerArgs.add("--enable-preview")
     sourceCompatibility = "25"
+}
+
+tasks.withType<JavaExec>() {
+    jvmArgs("--enable-preview")
 }
 
 tasks.withType<ShadowJar> {
